--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="header-left">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/AC.png" alt="logo">
+                            <img src="assets/images/svg/2.svg" alt="logo">
                         </a>
                     </div>
                 </div>
