--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Inbio is a personal portfolio template. You can customize all.</p>
+                <p class="discription">Making waves in Web, Video, and Graphic Design for you</p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills">
@@ -101,7 +101,7 @@
                 </ul>
                 <!-- social sharea area -->
                 <div class="social-share-style-1 mt--40">
-                    <span class="title">find with me</span>
+                    <span class="title">Socials</span>
                     <ul class="social-share d-flex liststyle">
                         <li class="facebook"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
                                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
@@ -159,7 +159,7 @@
                                     </h1>
 
                                     <div>
-                                        <p class="description">Hi! I'm Kenneth, specializing in web development, graphic design, and video editing. I build beautiful, responsive websites with HTML, CSS, JavaScript, and various frameworks, focusing on clean code and intuitive design. I also create eye-catching graphics using Canva Figma, and InDesign, and transform raw footage into engaging videos with Capcut and After Effects. Committed to delivering high-quality work, I'm easy to collaborate with and ready to bring your vision to life. Let's create something amazing together!
+                                        <p class="description">Making waves in Web, Video, and Graphic Design for you
                                         </p>
                                     </div>
                                 </div>
@@ -1453,7 +1453,7 @@
                     <div class="col-lg-12">
                         <div class="section-title text-center">
                             <span class="subtitle">Contact</span>
-                            <h2 class="title">Contact With Me</h2>
+                            <h2 class="title">Find me with</h2>
                         </div>
                     </div>
                 </div>
@@ -1468,13 +1468,13 @@
                                 <span>Web Dev | Graphic Design | Video Editor</span>
                             </div>
                             <div class="description">
-                                <p>I am available for freelance work. Connect with me via and call in to my account.
+                                <p>I am available for freelance work. Contact me in my socials.
                                 </p>
                                 <span class="phone">Phone: <a href="tel:01941043264">+639129305198</a></span>
                                 <span class="mail">Email: <a href="elemenjohnkennet.com">elemenjohnkenneth@gmail.com</a></span>
                             </div>
                             <div class="social-area">
-                                <div class="name">FIND WITH ME</div>
+                                <div class="name">Socials</div>
                                 <div class="social-icone">
                                     <a href="https://www.linkedin.com/in/john-kenneth-elemen-8224a7316/"><i data-feather="facebook"></i></a>
                                     <a href="https://www.linkedin.com/in/john-kenneth-elemen-8224a7316/"><i data-feather="linkedin"></i></a>
