--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     </div>
                                     <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12 mt_mobile--30">
                                         <div class="skill-share-inner">
-                                            <span class="title">best skill on</span>
+                                            <span class="title">best skills </span>
                                             <ul class="skill-share d-flex liststyle">
                                                 <li><img src="assets/images/icons/code-stable.png" alt="Icons Images"></li>
                                                 <li><img src="assets/images/icons/1664284690Capcut-Logo-PNG.webp" alt="Icons Images"></li>
