--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </nav>
                     <!-- Start Header Right  -->
                     <div class="header-right">
-                        
+                                       
                         <div class="hamberger-menu d-block d-xl-none">
                             <i id="menuBtn" class="feather-menu humberger-menu"></i>
                         </div>
@@ -94,6 +94,7 @@
                     <li class="nav-item"><a class="nav-link smoth-animation" href="#resume">Resume</a></li>
                     <li class="nav-item"><a class="nav-link smoth-animation" href="#clients">Tech Stacks</a></li>
                     <li class="nav-item"><a class="nav-link smoth-animation" href="#contacts">Contact</a></li>
+                    <li class="nav-item"> <a class="rn-btn" target="_blank" href="assets/images/certificate/CURICULUM VITEA.pdf" download="CURICULUM VITEA.pdf"><span>Download CV</span></a>       </li>
                 </ul>
                 <!-- social sharea area -->
                 <div class="social-share-style-1 mt--40">
