--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="order-1 order-lg-2 col-lg-5">
                             <div class="thumbnail">
                                 <div class="inner">
-                                    <img src="assets/images/FormalNoBackground.jpg" alt="Personal Portfolio Images">
+                                    <img src="assets/images/icons/FInal.png" alt="Personal Portfolio Images">
                                 </div>
                             </div>
                         </div>
@@ -1446,7 +1446,7 @@
                                 <img src="assets/images/svg/1.svg" alt="logo">
                             </a>
                         </div>
-                        <p class="description mt--30">© <a target="_blank" href="">© 2024 Wave. All Rights Reserved </a></p>
+                        <p class="description mt--30">© <a target="_blank" href=""> 2024 Wave. All Rights Reserved </a></p>
                     </div>
                 </div>
             </div>
