Added Sweet alert

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Style css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body class="template-color-1 spybody white-version" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
