--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
                                         <!-- ROTATING TEXT -->
                                         <span class="cd-words-wrapper">
                                                     <b class="is-visible"> Web Developer</b>
-                                                    <b class="is-hidden">UI/UX</b>
                                                     <b class="is-hidden">SQA SPECIALIST</b>
                                                     <b class="is-hidden">Graphic Designer</b>
-
+                                                    <b class="is-hidden">IT SUPPORT</b>
                                                 </span>
                                         </span>
                                         <!-- type headline end -->
